--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate":"ts-node node_modules/typeorm/cli.js migration:generate --config ./orm.config.json --name",
+    "migration:run":"ts-node node_modules/typeorm/cli.js migration:run --config ./orm.config.json",
+    "migration:revert":"ts-node node_modules/typeorm/cli.js migration:revert --config ./orm.config.json"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
